[gd_scene load_steps=10 format=3 uid="uid://45ujud28ob63"]

[ext_resource type="PackedScene" uid="uid://bb7tyn5pj0puo" path="res://scenes/components/HealthComponent.tscn" id="1_bk1xw"]
[ext_resource type="Script" path="res://scripts/entity/Tree.gd" id="1_giygg"]
[ext_resource type="Texture2D" uid="uid://bx1yo4q65i8h5" path="res://assets/entity/tree_sprite.png" id="2_tmghh"]
[ext_resource type="PackedScene" uid="uid://beq3far5dt8hg" path="res://scenes/components/HarvestableComponent.tscn" id="3_67kwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4ysk"]
size = Vector2(10, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8sc2"]
atlas = ExtResource("2_tmghh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emwmb"]
atlas = ExtResource("2_tmghh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3p56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8sc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emwmb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivo3m"]
size = Vector2(24, 30)

[node name="Tree" type="RigidBody2D"]
position = Vector2(1, -6)
input_pickable = true
gravity_scale = 0.0
max_contacts_reported = 3
contact_monitor = true
script = ExtResource("1_giygg")

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 10
text = "20/20"
horizontal_alignment = 1

[node name="Hitbox" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(-1, 4)
shape = SubResource("RectangleShape2D_o4ysk")

[node name="HealthComponent" parent="." instance=ExtResource("1_bk1xw")]
maxHealth = 20.0
currentHealth = 20.0

[node name="Sprites" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, -9)
sprite_frames = SubResource("SpriteFrames_g3p56")

[node name="HarvestableComponent" parent="." node_paths=PackedStringArray("animationSprite") instance=ExtResource("3_67kwb")]
animationSprite = NodePath("../Sprites")
growthTotalTime = 1.0

[node name="Area2D" type="Area2D" parent="."]
show_behind_parent = true
visibility_layer = 0
collision_mask = 0

[node name="ClickableArea" type="CollisionShape2D" parent="Area2D"]
show_behind_parent = true
position = Vector2(-1, -9)
shape = SubResource("RectangleShape2D_ivo3m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="canHarvestNode" from="HarvestableComponent" to="." method="_onRegrowth"]
[connection signal="input_event" from="Area2D" to="." method="_on_input_event"]
